# spectree

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  build.envd  cliff.toml  config.html  genindex.html  index.html  models.html  mypy.ini  objects.inv  plugins.html  py-modindex.html  pylock.legacy.toml  pylock.toml  pyproject.toml  requirements-legacy.txt  requirements.txt  response.html  search.html  searchindex.js  setup.cfg  setup.py  spectree.html  utils.html
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml  pythonpackage.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: codeql.yml  python-publish.yml  pythondoc.yml  pythonpackage.yml
_modules/: index.html
_modules/spectree/: config.html  models.html  response.html  spec.html  utils.html
_modules/spectree/plugins/: base.html  falcon_plugin.html  flask_plugin.html  starlette_plugin.html
_sources/: response.rst.txt  spectree.rst.txt
docs/: Makefile
docs/source/: adapter.rst  conf.py  config.rst  index.md  index.rst  models.rst  plugins.rst  response.rst  robots.txt  utils.rst
docs/source/_static/: custom.css
examples/: common.py  falcon_asgi_demo.py  falcon_demo.py  falcon_msgspec_demo.py  flask_demo.py  flask_view.py  lilya_demo.py  multi_example_demo.py  quart_demo.py  query_list.py  resp.py  security_demo.py  starlette_demo.py
requirements/: development.txt  production.txt
spectree/: __init__.py  _pydantic.py  _types.py  config.py  dataclass_model.py  dataclass_validator.py  default_models.py  errors.py  flask_backend.py  models.py  page.py  response.py  spec.py  types.py  utils.py  validation_helpers.py
spectree/model_adapter/: __init__.py  msgspec_adapter.py  protocol.py  pydantic.py  pydantic_adapter.py
spectree/plugins/: __init__.py  base.py  falcon_plugin.py  flask_plugin.py  lilya_plugin.py  page.py  quart_plugin.py  starlette_plugin.py  web_falcon.py  web_flask.py  werkzeug_utils.py
tests/: common.py  common_dataclass.py  common_pydantic.py  conftest.py  model_cases.py  test_base_plugin.py  test_config.py  test_model_adapter_contract.py  test_msgspec.py  test_plugin.py  test_plugin_falcon.py  test_plugin_falcon_asgi.py  test_plugin_falcon_model_adapters.py  test_plugin_falcon_msgspec.py  test_plugin_flask.py  test_plugin_flask_blueprint.py  test_plugin_flask_model_adapters.py  test_plugin_flask_view.py  test_plugin_lilya.py  test_plugin_quart.py  test_plugin_starlette.py  test_plugin_starlette_model_adapters.py  test_plugin_with_msgspec.py  test_pydantic.py  test_response.py  test_spec.py  test_utils.py  type_checking_annotation_case.py
tests/__snapshots__/pydantic1/: test_plugin_spec_pydantic1[falcon][full_spec].json  test_plugin_spec_pydantic1[flask][full_spec].json  test_plugin_spec_pydantic1[flask_blueprint][full_spec].json  test_plugin_spec_pydantic1[flask_view][full_spec].json  test_plugin_spec_pydantic1[starlette][full_spec].json
tests/__snapshots__/pydantic2/: test_plugin_spec_pydantic2[falcon][full_spec].json  test_plugin_spec_pydantic2[flask][full_spec].json  test_plugin_spec_pydantic2[flask_blueprint][full_spec].json  test_plugin_spec_pydantic2[flask_view][full_spec].json
tests/__snapshots__/test_plugin/: test_plugin_spec[falcon][full_spec].json  test_plugin_spec[flask][full_spec].json  test_plugin_spec[flask_blueprint][full_spec].json  test_plugin_spec[flask_view][full_spec].json  test_plugin_spec[starlette][full_spec].json
tests/flask_imports/: __init__.py  dry_plugin_flask.py
tests/import_module/: test_falcon_plugin.py  test_flask_plugin.py  test_msgspec_plugin.py  test_quart_plugin.py  test_starlette_plugin.py
tests/quart_imports/: __init__.py  dry_plugin_quart.py
