[project]
name = "spectree"
version = "1.4.5"
dynamic = []
description = "Generate OpenAPI document and validate request & response with Python annotations."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    { name = "Keming Yang", email = "kemingy94@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=1.2,<3",
]

[project.optional-dependencies]
offline = [
    "offapi>=0.1.0",
]
dev = [
    "ruff>=0.1.3",
    "mypy>=0.971",
    "pre-commit",
    "pytest>=7.1,<9.0",
    "syrupy>=4.0",
]
email = [
    "pydantic[email]>=1.2,<3",
]
falcon = [
    "falcon>=3.0.0",
]
flask = [
    "flask",
]
quart = [
    "quart"
]
starlette = [
    "starlette[full]",
]
docs = [
    "Sphinx",
    "shibuya",
    "myst-parser",
    "sphinx-sitemap",
]

[project.urls]
Homepage = "https://github.com/0b01001001/spectree"
documentation = "https://0b01001001.github.io/spectree/"
repository = "https://github.com/0b01001001/spectree"
changelog = "https://github.com/0b01001001/spectree/releases"

[tool.ruff]
target-version = "py39"
line-length = 88
[tool.ruff.lint]
select = ["E", "F", "B", "G", "I", "SIM", "TID", "PL", "RUF"]
ignore = ["E501", "PLR2004", "RUF012", "B009"]
[tool.ruff.lint.pylint]
max-args = 12
max-branches = 15

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_reexport = true
disable_error_code = ["attr-defined"]

[tool.pydantic-mypy]
init_typed = true
init_forbid_extra = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
