[project]
name = "spectree"
version = "3.0.0a0"
dynamic = []
description = "Generate OpenAPI document and validate request & response with Python annotations."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Keming Yang", email = "kemingy94@gmail.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2.11,<3"]
msgspec = ["msgspec>=0.21,<1"]
offline = ["offapi>=0.1.1"]
falcon = ["falcon>=3"]
starlette = ["starlette[full]>=0.16"]
flask = ["flask>=2"]
quart = ["quart>=0.16"]

[project.urls]
Homepage = "https://github.com/0b01001001/spectree"
documentation = "https://0b01001001.github.io/spectree/"
repository = "https://github.com/0b01001001/spectree"
changelog = "https://github.com/0b01001001/spectree/releases"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "."
includes = ["spectree"]
source-includes = ["README.md", "CHANGELOG.md", "LICENSE"]

[tool.ruff]
target-version = "py310"
line-length = 88
[tool.ruff.lint]
select = ["E", "F", "B", "G", "I", "SIM", "TID", "PL", "RUF"]
ignore = ["E501", "PLR2004", "RUF012", "B009"]
[tool.ruff.lint.pylint]
max-args = 12
max-branches = 15
[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_reexport = true
disable_error_code = ["attr-defined"]
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["valid-type"]

[tool.pydantic-mypy]
init_typed = true
init_forbid_extra = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
markers = [
    "pydantic: tests that rely on pydantic-specific models or behavior",
    "msgspec: tests that require msgspec, which is not available on PyPy",
]

[dependency-groups]
dev = [
    "anyio>=4.10.0",
    "mypy>=1.16.0",
    "prek>=0.1.2",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
    "syrupy>=4.9.1",
    "uvicorn>=0.35.0",
]
docs = [
    "myst-parser>=3.0.1",
    "shibuya>=2025.3.24",
    "sphinx>=7.4.7",
    "sphinx-sitemap>=2.6.0",
]
